@@ -1,6 +1,7 @@
 2007-03-31  Robert Ancell <robert.ancell@gmail.com>
 
 	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
+	* src/lib/gnome_sudoku.py Remember window size when quitting (Bug #380780)
 
 2007-03-25  Robert Ancell <robert.ancell@gmail.com>
 
